Hola amigos de YT

--- a/view/tema.html
+++ b/view/tema.html
@@ -10,7 +10,7 @@
     />
     <link
       rel="icon"
-      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
+      href="https://images.emojiterra.com/google/noto-emoji/v2.034/512px/1f30e.png"
     />
 
     <title>{%TEMA%} {%IMAGE%}</title>
@@ -23,7 +23,7 @@
 
   <body>
     <div class="container">
-      <h1>Infraesctructura de Comunicaciones</h1>
+      <h1>Modelo TCP/IP</h1>
 
       <figure class="tema">
         
@@ -64,6 +64,7 @@
           {%WEBIMAGE%}
           <br>
           <p class="tema__description">{%DESCRIPTION2%}</p>
+          {%WEBIMAGE1%}
         </div>
 
         <div style="text-align: center;">
