--- a/view/overview.html
+++ b/view/overview.html
@@ -22,7 +22,7 @@
 
   <body>
     <div class="container">
-      <h1>Infraesctructura de Comunicaciones</h1>
+      <h1>Modelo TCP/IP</h1>
 
       <div class="cards-container">
         {%TEMAS%}
