--- a/view/tema.html
+++ b/view/tema.html
@@ -56,19 +56,35 @@
           <span>Add to shopping card ({%PRICE%})E</span>
         </a> -->
 
-        <p class="tema__description" style="text-align: center;">
+        <p class="tema__description" style="text-align: left; font-family: Verdana, Geneva, Tahoma, sans-serif">
           {%DESCRIPTION1%}
         </p>
-
+        
         <div style="text-align: center;">
           {%WEBIMAGE%}
+        </div>
+
+        <div style="text-align: left; font-family: Verdana, Geneva, Tahoma, sans-serif">
           <br>
           <p class="tema__description">{%DESCRIPTION2%}</p>
+        </div>
+
+        <div style="text-align: center;">
           {%WEBIMAGE1%}
+        </div>
+
+        <div style="text-align: left; font-family: Verdana, Geneva, Tahoma, sans-serif;">
+          <br>
+          <p class="tema__description">{%DESCRIPTION3%}</p>
         </div>
 
         <div style="text-align: center;">
           {%WEBVIDEO%}
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
         </div>
 
       </figure>
