--- a/css/tema.css
+++ b/css/tema.css
@@ -56,7 +56,7 @@ margin: 0 auto;
 width: 85rem;
 margin: 0 auto;
 margin-top: 9rem;
-background: white;
+background: whitesmoke;
 box-shadow: 0 3rem 6rem 1rem rgba(0, 0, 0, 0.2);
 position: relative;
 }
