--- a/view/overview.html
+++ b/view/overview.html
@@ -10,7 +10,7 @@
     />
     <link
       rel="icon"
-      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
+      href="https://images.emojiterra.com/google/noto-emoji/v2.034/512px/1f30e.png"
     />
 
     <title>INFRACOM</title>
