--- a/view/tema.html
+++ b/view/tema.html
@@ -56,7 +56,7 @@
           <span>Add to shopping card ({%PRICE%})E</span>
         </a> -->
 
-        <p class="tema__description" style="text-align: center;">
+        <p class="tema__description">
           {%DESCRIPTION1%}
         </p>
 
@@ -67,8 +67,15 @@
           {%WEBIMAGE1%}
         </div>
 
+        <p class="tema__description">{%DESCRIPTION3%}</p>
+
         <div style="text-align: center;">
           {%WEBVIDEO%}
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
         </div>
 
       </figure>
