--- a/view/tema.html
+++ b/view/tema.html
@@ -58,6 +58,7 @@
 
         <div style="text-align: center;">
           {%WEBVIDEO%}
+          <a href="http://redespomactividad.weebly.com/uploads/5/4/1/7/54172823/8091749_orig.jpg" download>Descargar archivo PDF</a>
           <br>
           <br>
           <br>
