--- a/view/temasOPC.html
+++ b/view/temasOPC.html
@@ -5,7 +5,7 @@
       <h2 class="card__title">{%TEMA%}</h2>
     </div>
     
-    <a class="card__link" href="/product?id={%ID%}">
+    <a class="card__link" href="/capa?id={%ID%}">
       <span><i class="emoji-right">▶</i></span>
     </a>
   </figure>
